welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:31: error: ';' expected but '=' found.
else {return = false};	
             ^